--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,12 +16,10 @@ Yosys 0.8 .. Yosys 0.8-dev
     - Added "gate2lut.v" techmap rule
     - Added "rename -src"
     - Added "equiv_opt" pass
-<<<<<<< HEAD
-    - Added "muxpack" pass
-=======
     - Added "read_aiger" frontend
->>>>>>> origin/master
+    - Added "muxpack" pass
     - "synth_xilinx" to now infer hard shift registers, using new "shregmap -tech xilinx"
+    - "synth_xilinx" to now infer wide multiplexers
 
 
 Yosys 0.7 .. Yosys 0.8
