--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,7 @@ Yosys 0.8 .. Yosys 0.8-dev
     - Added "abc9" pass for timing-aware techmapping (experimental, FPGA only, no FFs)
     - Added "synth_xilinx -abc9" (experimental)
     - Added "synth_ice40 -abc9" (experimental)
+    - Added "synth -abc9" (experimental)
     - "synth_xilinx" to now infer hard shift registers, using new "shregmap -tech xilinx"
 
 
