--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,12 +17,13 @@ Yosys 0.8 .. Yosys 0.8-dev
     - Added "rename -src"
     - Added "equiv_opt" pass
     - Added "read_aiger" frontend
+    - Added "shregmap -tech xilinx"
     - Added "abc9" pass for timing-aware techmapping (experimental, FPGA only, no FFs)
     - Added "synth_xilinx -abc9" (experimental)
     - Added "synth_ice40 -abc9" (experimental)
     - Added "synth -abc9" (experimental)
-    - "synth_xilinx" to now infer hard shift registers, using new "shregmap -tech xilinx"
-    - "synth_xilinx" to now infer wide multiplexers
+    - "synth_xilinx" to now infer hard shift registers (-nosrl to disable)
+    - "synth_xilinx" to now infer wide multiplexers (-nomux to disable)
 
 
 Yosys 0.7 .. Yosys 0.8
