--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,8 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Added "opt_share" pass, run as part of "opt -full"
     - Added "ice40_wrapcarry" to encapsulate SB_LUT+SB_CARRY pairs for techmapping
     - Removed "ice40_unlut"
+    - Added "xilinx_srl" for Xilinx shift register extraction
+    - Removed "shregmap -tech xilinx"
 
 Yosys 0.8 .. Yosys 0.8-dev
 --------------------------
