Mention shregmap -tech xilinx is superseded

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -29,7 +29,7 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Removed "ice40_unlut"
     - Improvements in pmgen: slices, choices, define, generate
     - Added "xilinx_srl" for Xilinx shift register extraction
-    - Removed "shregmap -tech xilinx"
+    - Removed "shregmap -tech xilinx" (superseded by "xilinx_srl")
 
 Yosys 0.8 .. Yosys 0.8-dev
 --------------------------
