Add more entries

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -41,6 +41,7 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Added "_TECHMAP_WIREINIT_*_" attribute and "_TECHMAP_REMOVEINIT_*_" wire for "techmap" pass
     - Added "-match-init" option to "dff2dffs" pass
     - Added +/mul2dsp.v for decomposing wide multipliers to custom-sized ones
+    - Added "ice40_dsp" for Lattice iCE40 DSP packing
     - Added "xilinx_dsp" for Xilinx DSP packing
     - "synth_xilinx" to now infer DSP blocks (-nodsp to disable)
     - "synth_ecp5" to now infer DSP blocks (-nodsp to disable, experimental)
