--- a/CHANGELOG
+++ b/CHANGELOG
@@ -41,6 +41,8 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Removed "shregmap -tech xilinx" (superseded by "xilinx_srl")
     - Added "_TECHMAP_WIREINIT_*_" attribute and "_TECHMAP_REMOVEINIT_*_" wire for "techmap" pass
     - Added "-match-init" option to "dff2dffs" pass
+    - Added "techmap_autopurge" support to techmap
+    - Added "add -mod <modname[s]>"
 
 Yosys 0.8 .. Yosys 0.9
 ----------------------
