fix typo in `write_smt2` help

--- a/manual/command-reference-manual.tex
+++ b/manual/command-reference-manual.tex
@@ -5350,7 +5350,7 @@ never transition from a non-zero value to a zero value.
 
 For this proof we create the following template (test.tpl).
 
-        ; we need QF_UFBV for this poof
+        ; we need QF_UFBV for this proof
         (set-logic QF_UFBV)
 
         ; insert the auto-generated code here
