Get rid of dffsr2dff.
This pass is a proper subset of opt_rmdff, which is called by opt, which
is called by every synth flow in the coarse part.  Thus, it never
actually does anything and can be safely removed.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -63,6 +63,7 @@ Yosys 0.9 .. Yosys 0.9-dev
     - Improved support of $readmem[hb] Memory Content File inclusion
     - Added "opt_lut_ins" pass
     - Added "logger" pass
+    - Removed "dffsr2dff" (use opt_rmdff instead)
 
 Yosys 0.8 .. Yosys 0.9
 ----------------------
